fixed server communication, message fetching